log
Fri Mar 13 05:49:20 PM UTC 2026: 
 tests:  0|5
total_score: 0/70
7d0769a
Fri Mar 20 05:49:23 PM UTC 2026: 
 exercises.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  1|4
total_score: 10/70
cb007c3
Fri Mar 20 06:06:42 PM UTC 2026: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:5: error: expected expression before ‘int’
   46 |    *int elemento = malloc(sizeof(int));
      |     ^~~
0135092
